--- a/wave_eqn.ipynb
+++ b/wave_eqn.ipynb
@@ -6,24 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import PyQt5\n",
-    "# !pip install PyQt5\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "from matplotlib import animation\n",
-    "\n",
-    "from IPython.display import HTML\n"
+    "from IPython.display import HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My attempt at 1d AWE\n",
+    "My attempt at solving the 1D acoustic wave equation with the help from references listed below. This notebook implementation has both Neumann and Dirchlet boundary conditions to choose from.\n",
     "\n",
-    "Refs: \n",
-    "\n",
+    "References: \n",
     "- http://hplgit.github.io/num-methods-for-PDEs/doc/pub/wave/pdf/wave-4print-A4-2up.pdf\n",
     "- https://github.com/hplgit/INF5620/blob/gh-pages/src/wave/wave1D_dn.py\n",
     "- http://hplgit.github.io/INF5620/doc/notes/main_wave.html#wave:string\n",
@@ -41,7 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def boundary_condition(type, U, Um1, C2, nx):    \n",
+    "    # Set boundary conditions according to type\n",
+    "\n",
+    "    # Modify stencil for Neumann boundary conditions at domain boundary\n",
+    "    if type == \"neumann\": \n",
+    "        i = 0 # for i = 0\n",
+    "        Up1[i] = -Um1[i] + 2*U[i] + 2*C2*(U[i+1] - U[i])\n",
+    "\n",
+    "        i = nx-1 # for i = Nx\n",
+    "        Up1[i] = -Um1[i] + 2*U[i] + 2*C2*(U[i-1] - U[i])\n",
+    "\n",
+    "    # Assign the values of a solution along the boundary of the domain\n",
+    "    elif type == \"dirchlet\": \n",
+    "        Up1[0] = 0\n",
+    "        Up1[nx-1] = 0\n",
+    "    \n",
+    "    return Up1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2537,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2565,35 +2585,26 @@
     "for i in range(1, nx-1):\n",
     "    Up1[i] = U[i] - 0.5*C2*(U[i+1] - 2*U[i] + U[i-1])  \n",
     "\n",
-    "    # U[i] = Um1[i] - 0.5*C2*(Um1[i+1] - 2*Um1[i] + Um1[i-1])  \n",
-    "\n",
     "# Select boundary conditions - two options\n",
     "#   1. Dirchlet BC (flips polarity upon reflection)\n",
-    "#       Specifies the values that a solution needs to take along the boundary of the domain:\n",
+    "#       Specifies the values of a solution along the boundary of the domain:\n",
     "#       -> u = 0 at boundary\n",
     "#       For i=0, U_i = 0; \n",
     "#       For i=nx, U_i = 0\n",
     "#\n",
     "#   2. Neumann BC (preserves sign of reflection at boundary)\n",
-    "#       Specifies the values for the derivative applied at the boundary of the domain:\n",
+    "#       Specifies the values for the derivative applied at the boundary of the domain via a modified stencil:\n",
     "#       -> du/dn = 0 at boundary \n",
     "#       For i=0, U_i-1 == U_i+1; \n",
     "#       For i=nx, U_nx+1 == U_nx-1\n",
+    "#       Note that Neumann BCs can also be implmented via the ghost cell/point approach.\n",
     "\n",
-    "neumann = True\n",
-    "if neumann is not True:\n",
-    "    dirchlet = True\n",
+    "# Select BC type: \"neumann\" or \"dirchlet\"\n",
+    "BC_type = \"dirchlet\"\n",
+    "BC_type = \"neumann\"\n",
     "\n",
     "# Set boundary conditions for time step 0\n",
-    "if neumann: # Modify stencil for Neumann boundary conditions at domain boundary\n",
-    "    i = 0 # for i = 0\n",
-    "    Up1[i] = -Um1[i] + 2*U[i] + 2*C2*(U[i+1] - U[i])\n",
-    "\n",
-    "    i = nx-1 # for i = Nx\n",
-    "    Up1[i] = -Um1[i] + 2*U[i] + 2*C2*(U[i-1] - U[i])\n",
-    "\n",
-    "elif dirchlet: # Assign values to that solution at domain boundary\n",
-    "    Up1[0] = 0; Up1[nx-1] = 0\n",
+    "Up1 = boundary_condition(BC_type, U, Um1, C2, nx)\n",
     "\n",
     "# Save solution for timestep == 0\n",
     "t = 0\n",
@@ -2611,15 +2622,7 @@
     "        Up1[i] = 2*U[i] - Um1[i] + C2*(U[i+1] - 2*U[i] + U[i-1])\n",
     "        \n",
     "    # Set boundary conditions for current time step\n",
-    "    if neumann: # Modify stencil for Neumann boundary conditions at domain boundary\n",
-    "        i = 0 # for i = 0\n",
-    "        Up1[i] = -Um1[i] + 2*U[i] + 2*C2*(U[i+1] - U[i])\n",
-    "\n",
-    "        i = nx-1 # for i = Nx\n",
-    "        Up1[i] = -Um1[i] + 2*U[i] + 2*C2*(U[i-1] - U[i])\n",
-    "\n",
-    "    elif dirchlet: # Assign values to that solution at domain boundary\n",
-    "        Up1[0] = 0; Up1[nx-1] = 0\n",
+    "    Up1 = boundary_condition(BC_type, U, Um1, C2, nx)\n",
     "\n",
     "    # Save solution for current time step\n",
     "    solution[:,t] = Up1    \n",
@@ -2627,7 +2630,6 @@
     "    # Update wavefields for next time step\n",
     "    Um1 = U.copy() \n",
     "    U = Up1.copy()\n",
-    "\n",
     "\n",
     "\n",
     "# Animate solution\n",
@@ -2650,7 +2652,7 @@
     "    plt.title('AWE at %f ms'%(k*dt*1000))\n",
     "    k += nskip  # 1\n",
     "\n",
-    "# . . Call the animator. \n",
+    "# Call the animator. \n",
     "anim1 = animation.FuncAnimation(fig1,AWE_1D_animate,frames=int((nt-2*nskip)/nskip),interval=50)\n",
     "\n",
     "HTML(anim1.to_html5_video())\n",
